Working autonomous finding of stool plane normal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,16 +127,18 @@ include_directories(
 # add_dependencies(can_finder ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(can_finder_node src/can_finder_node.cpp)
+add_executable(autonomous_find_plane_pcd_file src/autonomous_find_plane_pcd_file.cpp
+        ${pcl_utils_SOURCE_DIR}/src/find_indices_of_plane_from_patch.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(can_finder_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(can_finder_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(autonomous_find_plane_pcd_file
+  ${catkin_LIBRARIES}
+    pcl_utils
+)
 
 #############
 ## Install ##
